--- a/html/executive_interview01.html
+++ b/html/executive_interview01.html
@@ -184,7 +184,7 @@
         </div>
         <div class="attemiru">
                 <h3>面接をお願いする</h3>
-                <a href="staff.html" class="contact_btn">CONTACT</a>
+                <a href="contact.html" class="contact_btn">CONTACT</a>
             </div>
         <hr>
         <div class="container memberlink">
