--- a/html/staff_interview01.html
+++ b/html/staff_interview01.html
@@ -105,7 +105,7 @@
             </div>
             <div class="attemiru">
                 <h3>この先輩に会ってみる！</h3>
-                <a href="staff.html" class="contact_btn">CONTACT</a>
+                <a href="contact.html" class="contact_btn">CONTACT</a>
             </div>
         <hr>
         <div class="container memberlink">
