--- a/html/executive_interview01.html
+++ b/html/executive_interview01.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="attemiru">
-                <h3>この先輩に会ってみる！</h3>
+                <h3>面接をお願いする</h3>
                 <a href="staff.html" class="contact_btn">CONTACT</a>
             </div>
         <hr>
